Added a link to metapatterns on GitHub wiki

--- a/metapatterns/layouts/partials/docs/inject/menu-after.html
+++ b/metapatterns/layouts/partials/docs/inject/menu-after.html
@@ -9,5 +9,6 @@
         <li><a href="https://refactoring.guru/design-patterns" rel="nofollow">Gang of Four Design Patterns</a></li>
         <li><a href="https://gameprogrammingpatterns.com/contents.html" rel="nofollow">Game Programming Patterns</a></li>
         <li><a href="https://www.hillside.net/index.php/past-plop-conferences" rel="nofollow">PLoP Archive</a></li>
+        <li><a href="https://github.com/denyspoltorak/metapatterns/wiki" rel="nofollow">Metapatterns on GitHub</a></li>
     </ul>
 </nav>
