Added architectural-patterns.net to the list of websites

--- a/metapatterns/layouts/partials/docs/inject/menu-after.html
+++ b/metapatterns/layouts/partials/docs/inject/menu-after.html
@@ -3,6 +3,7 @@
 <ul>
     <li><a href="https://martinfowler.com/architecture/" rel="nofollow">Martin Fowler's Bliki</a></li>
     <li><a href="https://herbertograca.com/2017/07/03/the-software-architecture-chronicles/" rel="nofollow">Software Architecture Chronicles</a></li>
+    <li><a href="https://architectural-patterns.net/" rel="nofollow">Patterns and Principles</a></li>
     <li><a href="https://www.enterpriseintegrationpatterns.com/patterns/messaging/" rel="nofollow">Enterprise Integration Patterns</a></li>
     <li><a href="https://microservices.io/patterns/index.html" rel="nofollow">Microservices Patterns</a></li>
     <li><a href="https://refactoring.guru/design-patterns" rel="nofollow">Gang of Four Design Patterns</a></li>
